TEST_PROGRAMS/INVALID/chia-wei_liu/invalid3.min
string = "casper is breaking this program";

# should get error for assigning to keyword
